deploy/gateway/airflow.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow
  namespace: airflow
spec:
  parentRefs:
    - name: local
      namespace: gateway
      sectionName: http
  hostnames:
    - airflow.localhost
  rules:
    - backendRefs:
        - name: airflow-api-server
          port: 8080
