deploy/gateway/hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
    - hubble.localhost
  parentRefs:
    - name: local
      namespace: gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
